force-app/main/default/objects/Campaign/fields/Actual_External_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_External_Revenue__c</fullName>
    <description>Identifies amount of external funding leveraged.</description>
    <label>Actual External Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>