force-app/main/default/objects/Campaign/fields/Actual_Internal_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Internal_Revenue__c</fullName>
    <description>Identifies amount of internal funding.</description>
    <label>Actual Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>