force-app/main/default/objects/Campaign/fields/Actual_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Revenue__c</fullName>
    <formula>Actual_External_Revenue__c +  Actual_Internal_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>