force-app/main/default/objects/Campaign/fields/BR_and_E_staff_Assistance__c.field-meta.xml
<CustomField>
    <fullName>BR_and_E_staff_Assistance__c</fullName>
    <description>This is the type of service rendered to the external clients</description>
    <inlineHelpText>This is the type of service rendered to the external clients</inlineHelpText>
    <label>BR and E staff Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>Business Connect Programs</fullName>
            </value>
            <value>
                <fullName>Committee of Adjustment</fullName>
            </value>
            <value>
                <fullName>Gold Star</fullName>
            </value>
            <value>
                <fullName>Natural Heritage</fullName>
            </value>
            <value>
                <fullName>Official Plan</fullName>
            </value>
            <value>
                <fullName>Parks Forestry &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Pre-application Meeting</fullName>
            </value>
            <value>
                <fullName>Preliminary Project Review (PPR)</fullName>
            </value>
            <value>
                <fullName>Property Taxes</fullName>
            </value>
            <value>
                <fullName>Signature Sites</fullName>
            </value>
            <value>
                <fullName>Site Plan Control</fullName>
            </value>
            <value>
                <fullName>Site Selection</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>TRCA</fullName>
            </value>
            <value>
                <fullName>Zoning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>