force-app/main/default/objects/Campaign/fields/Building_Application__c.field-meta.xml
<CustomField>
    <fullName>Building_Application__c</fullName>
    <description>This is the building application number.</description>
    <inlineHelpText>This is the building application number.</inlineHelpText>
    <label>Building Application #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>