force-app/main/default/objects/Campaign/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>BRE</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>International Alliance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>BIA</fullName>
            </value>
            <value>
                <fullName>GM&#39;s Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>