force-app/main/default/objects/Campaign/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <formula>TEXT(Account__r.Business_Sectors__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Sector</label>
    <type>Text</type>
</CustomField>