force-app/main/default/objects/Campaign/fields/Business_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sub_Sector__c</fullName>
    <formula>TEXT(Account__r.Business_Subsector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Sub Sector</label>
    <type>Text</type>
</CustomField>