force-app/main/default/objects/Campaign/fields/Capital_Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>Capital_Investment_Value__c</fullName>
    <description>This is value of the assets that is being used up or used in the construction of the new bulding or the additional expansion e.g. machinery.</description>
    <inlineHelpText>This is value of the assets that is being used up or used in the construction of the new bulding or the additional expansion e.g. machinery.</inlineHelpText>
    <label>Capital Investment Value ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>