force-app/main/default/objects/Campaign/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The name of the city where the Investment property is located</description>
    <inlineHelpText>The name of the city where the Investment property is located</inlineHelpText>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>