force-app/main/default/objects/Campaign/fields/Community_Council_area__c.field-meta.xml
<CustomField>
    <fullName>Community_Council_area__c</fullName>
    <label>Community Council area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scarborough</fullName>
            </value>
            <value>
                <fullName>Etobicoke-York</fullName>
            </value>
            <value>
                <fullName>North York</fullName>
            </value>
            <value>
                <fullName>Toronto and East York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>