force-app/main/default/objects/Campaign/fields/Created_By_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Profile__c</fullName>
    <description>This formula field is used to capture profile of User who is creating new Initiative Record and this will be than used in Workflow rules not to trigger surveys for BIA Profiles</description>
    <formula>CreatedBy.Profile.Name</formula>
    <inlineHelpText>This formula field is used to capture profile of User who is creating new Initiative Record and this will be than used in Workflow rules not to trigger surveys for BIA Profiles</inlineHelpText>
    <label>Created By User Profile</label>
    <type>Text</type>
</CustomField>