force-app/main/default/objects/Campaign/fields/Delegate_Program_Members__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Program_Members__c</fullName>
    <label>Delegate Program Members</label>
    <summaryFilterItems>
        <field>CampaignMember.Member_Role__c</field>
        <operation>equals</operation>
        <value>Stakeholder - Delegate (Inbound), Stakeholder - Delegate (Outbound)</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>