force-app/main/default/objects/Campaign/fields/EDC_Report_Description__c.field-meta.xml
<CustomField>
    <fullName>EDC_Report_Description__c</fullName>
    <description>This is a free form text field where the user can enter any text pertaining to the interaction included in the weekly report</description>
    <inlineHelpText>This is a free form text field where the user can enter any text pertaining to the interaction included in the weekly report</inlineHelpText>
    <label>EDC Report Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>