force-app/main/default/objects/Campaign/fields/Employment_Area__c.field-meta.xml
<CustomField>
    <fullName>Employment_Area__c</fullName>
    <label>Employment Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_is_an_Employment_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport Corporate Centre (Centennial)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (Bermondsey)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (Consumers)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (Don Mills)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (Leaside)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (Steeles Tech)</fullName>
            </value>
            <value>
                <fullName>Don Valley Parkway Corridor (York Mills-Leslie)</fullName>
            </value>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>Dufferin Keele North (Dufferin-Finch)</fullName>
            </value>
            <value>
                <fullName>Dufferin Keele South (Downsview)</fullName>
            </value>
            <value>
                <fullName>Dufferin Keele South (Lawrence-Keele)</fullName>
            </value>
            <value>
                <fullName>Dufferin Keele South (Orfus)</fullName>
            </value>
            <value>
                <fullName>Etobicoke Centre*</fullName>
            </value>
            <value>
                <fullName>Highway 400 Corridor (400-401)</fullName>
            </value>
            <value>
                <fullName>Highway 400 Corridor (400-Finch)</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Milliken</fullName>
            </value>
            <value>
                <fullName>North West Etobicoke (Claireville)</fullName>
            </value>
            <value>
                <fullName>North York Centre*</fullName>
            </value>
            <value>
                <fullName>Rexdale</fullName>
            </value>
            <value>
                <fullName>Scarborough Centre*</fullName>
            </value>
            <value>
                <fullName>Scarborough Highway 401 Corridor (Milner)</fullName>
            </value>
            <value>
                <fullName>Scarborough Highway 401 Corridor (Progress)</fullName>
            </value>
            <value>
                <fullName>South East Scarborough (Coronation)</fullName>
            </value>
            <value>
                <fullName>South Etobicoke (Central Etobicoke)</fullName>
            </value>
            <value>
                <fullName>South Etobicoke (Lake Shore)</fullName>
            </value>
            <value>
                <fullName>South Etobicoke (Park Lawn)</fullName>
            </value>
            <value>
                <fullName>South West Scarborough (Golden Mile)</fullName>
            </value>
            <value>
                <fullName>South West Scarborough (Wexford)</fullName>
            </value>
            <value>
                <fullName>Tapscott</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>