force-app/main/default/objects/Campaign/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>This is the Project Estimated Date of Completion</description>
    <inlineHelpText>This is the Project Estimated Date of Completion</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>