force-app/main/default/objects/Campaign/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <inlineHelpText>Business Support - Supporting external organizations and their events.
Networking Events -Track attendees at networking events delivered by EDC.
Business Training-Track attendees at training sessions delivered by EDC.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Support</fullName>
            </value>
            <value>
                <fullName>Networking Events</fullName>
            </value>
            <value>
                <fullName>Business Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>