force-app/main/default/objects/Campaign/fields/External_Referral__c.field-meta.xml
<CustomField>
    <fullName>External_Referral__c</fullName>
    <label>External Referral</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct from Business (External)</fullName>
            </value>
            <value>
                <fullName>ICI Real Estate Rep (External)</fullName>
            </value>
            <value>
                <fullName>Invest in Canada</fullName>
            </value>
            <value>
                <fullName>Ontario Investment Office</fullName>
            </value>
            <value>
                <fullName>Real Estate Investment Corporation (External)</fullName>
            </value>
            <value>
                <fullName>Toronto Global (External)</fullName>
            </value>
            <value>
                <fullName>Planning Consultant (External)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>