force-app/main/default/objects/Campaign/fields/External_Revenue_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Revenue_Source__c</fullName>
    <label>External Revenue Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Revenue Generation</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>