force-app/main/default/objects/Campaign/fields/Fund_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Fund_Amount_2__c</fullName>
    <label>Fund Amount -2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>