force-app/main/default/objects/Campaign/fields/General_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>General_Project_Type__c</fullName>
    <label>General Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sector Development</fullName>
            </value>
            <value>
                <fullName>Community Development</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Investment Attraction</fullName>
            </value>
            <value>
                <fullName>Workforce Development</fullName>
            </value>
            <value>
                <fullName>Market Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>