force-app/main/default/objects/Campaign/fields/Group_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Management_Type__c</fullName>
    <inlineHelpText>Advisory Group - Groups providing input in Toronto programming and policy making.
Stakeholder Group - Used to manage a list of stakeholders – such as a list of manufacturers that can be consulted on projects.</inlineHelpText>
    <label>Group Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Group (Formal)</fullName>
            </value>
            <value>
                <fullName>Distribution List (Informal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>