force-app/main/default/objects/Campaign/fields/IMIT_Status__c.field-meta.xml
<CustomField>
    <fullName>IMIT_Status__c</fullName>
    <label>IMIT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMIT Application</fullName>
            </value>
            <value>
                <fullName>IMIT FIA Approval</fullName>
            </value>
            <value>
                <fullName>No Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>