force-app/main/default/objects/Campaign/fields/Initiative_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This field will be used to capture the integration source whenever Initiative record is created/updated from Form Assembly or Workato.</description>
    <inlineHelpText>This field will be used to capture the integration source whenever Initiative record is created/updated from Form Assembly or Workato.</inlineHelpText>
    <label>Initiative Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>