force-app/main/default/objects/Campaign/fields/Internal_Referral__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referral__c</fullName>
    <description>If Councillor&#39;s office is selected then the Councillor Requesting Councillor&#39;s ward becomes mandatory.</description>
    <inlineHelpText>If Councillor&#39;s office is selected then the Councillor Requesting Councillor&#39;s ward becomes mandatory.</inlineHelpText>
    <label>Internal Referral</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mayor&#39;s office</fullName>
            </value>
            <value>
                <fullName>Councillor&#39;s office</fullName>
            </value>
            <value>
                <fullName>City Planning</fullName>
            </value>
            <value>
                <fullName>Toronto Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>