force-app/main/default/objects/Campaign/fields/International_Agreement__c.field-meta.xml
<CustomField>
    <fullName>International_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>International Agreement</label>
    <referenceTo>International_Agreement__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>