force-app/main/default/objects/Campaign/fields/International_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>International_Project_Type__c</fullName>
    <label>International Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Mission</fullName>
            </value>
            <value>
                <fullName>Inbound Mission</fullName>
            </value>
            <value>
                <fullName>International Relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>