force-app/main/default/objects/Campaign/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <description>This is the type of Project Investment. The Investment types are Industrial office, Retail Services, Commercial, Institutional etc</description>
    <inlineHelpText>This is the type of Project Investment. The Investment types are Industrial office, Retail Services, Commercial, Institutional etc</inlineHelpText>
    <label>Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial (Manufacturing/Warehousing/Distribution)</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>