force-app/main/default/objects/Campaign/fields/Is_this_is_an_Employment_Area__c.field-meta.xml
<CustomField>
    <fullName>Is_this_is_an_Employment_Area__c</fullName>
    <label>Is this is an Employment Area?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>