force-app/main/default/objects/Campaign/fields/Jobs_New__c.field-meta.xml
<CustomField>
    <fullName>Jobs_New__c</fullName>
    <label>Jobs New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>