force-app/main/default/objects/Campaign/fields/Jobs_Retained__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Retained__c</fullName>
    <label>Jobs Retained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>