force-app/main/default/objects/Campaign/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>This is the last activity date of investment activity record from old database.</description>
    <inlineHelpText>This is the last activity date of investment activity record from old database.</inlineHelpText>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>