force-app/main/default/objects/Campaign/fields/Latest_Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>Latest_Activity_Details__c</fullName>
    <label>Latest Activity Details</label>
    <length>33768</length>
    <type>LongTextArea</type>
</CustomField>