force-app/main/default/objects/Campaign/fields/Legacy_Investment_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Investment_Record_Id__c</fullName>
    <description>This is Unique Record Id from Investment Activity Old Database</description>
    <inlineHelpText>This is Unique Record Id from Investment Activity Old Database</inlineHelpText>
    <label>Legacy Investment Record Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>