force-app/main/default/objects/Campaign/fields/New_Construction_Addition_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>New_Construction_Addition_Sq_Ft__c</fullName>
    <description>This is the square feet of the new construction or the addition</description>
    <inlineHelpText>This is the square feet of the new construction or the addition</inlineHelpText>
    <label>New Construction/Addition Sq. Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>