force-app/main/default/objects/Campaign/fields/New_Construction_Addition_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Construction_Addition_Value__c</fullName>
    <description>This is the estimated dollar amount that will be spent on the actual construction of the building or the upgrade to the building. This includes Hard and Soft cost.</description>
    <inlineHelpText>This is the estimated dollar amount that will be spent on the actual construction of the building or the upgrade to the building. This includes Hard and Soft cost.</inlineHelpText>
    <label>New Construction/Addition Value ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>