force-app/main/default/objects/Campaign/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Note field</description>
    <inlineHelpText>Note field</inlineHelpText>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>