force-app/main/default/objects/Campaign/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <description>This field is used to capture Number of Attendees expected to be part of this Event.</description>
    <inlineHelpText>This field is used to capture Number of Attendees expected to be part of this Event.</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>