force-app/main/default/objects/Campaign/fields/Planning_Application__c.field-meta.xml
<CustomField>
    <fullName>Planning_Application__c</fullName>
    <description>This is the planning application number.</description>
    <inlineHelpText>This is the planning application number.</inlineHelpText>
    <label>Planning Application #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>