force-app/main/default/objects/Campaign/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The Zip code or the Postal code where the Investment property is located.</description>
    <inlineHelpText>The Zip code or the Postal code where the Investment property is located.</inlineHelpText>
    <label>Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>