force-app/main/default/objects/Campaign/fields/Program_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Sub_Type__c</fullName>
    <label>Business Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Events</fullName>
            </value>
            <value>
                <fullName>Business Start Up</fullName>
            </value>
            <value>
                <fullName>Business Expansion</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>