force-app/main/default/objects/Campaign/fields/Project_Focus__c.field-meta.xml
<CustomField>
    <fullName>Project_Focus__c</fullName>
    <label>Project Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attraction - Expansion &amp; Location Assistance</fullName>
            </value>
            <value>
                <fullName>Attraction - New Investment (FDI &amp; Relocation)</fullName>
            </value>
            <value>
                <fullName>Biz Development - Business Introduction</fullName>
            </value>
            <value>
                <fullName>Biz Development - Cluster Development</fullName>
            </value>
            <value>
                <fullName>Biz Development - Delegation Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - Event Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - Export Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - Import Assistance</fullName>
            </value>
            <value>
                <fullName>Biz Development - Partnership Development</fullName>
            </value>
            <value>
                <fullName>Biz Development - PR &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Biz Development - TAP Program</fullName>
            </value>
            <value>
                <fullName>Biz Development - Workforce Development</fullName>
            </value>
            <value>
                <fullName>City - Building Permit</fullName>
            </value>
            <value>
                <fullName>City - IMIT</fullName>
            </value>
            <value>
                <fullName>City - Planning Issue (Zoning &amp; OP)</fullName>
            </value>
            <value>
                <fullName>City – Property maintenance and standards</fullName>
            </value>
            <value>
                <fullName>City – Property taxes</fullName>
            </value>
            <value>
                <fullName>City - Regulatory</fullName>
            </value>
            <value>
                <fullName>City – Transportation</fullName>
            </value>
            <value>
                <fullName>Regulatory Issues - Federal</fullName>
            </value>
            <value>
                <fullName>Regulatory Issues - Provincial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>